attempting to fix weird animations on mobile/tablet

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -144,6 +144,7 @@ body h6{
 
 .animate-switch.ng-enter, .animate-switch.ng-leave {
     transition: all linear .8s;
+    transition-delay: 150ms;
     position: absolute;
     top: 0;
     left: 0;
